parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> md
Rule 1     md -> md head
Rule 2     md -> md line paragraph
Rule 3     md -> md codefield line CODEFIELD
Rule 4     md -> md quote
Rule 5     md -> md image
Rule 6     md -> md line
Rule 7     md -> empty
Rule 8     md -> md LISTNUMBER paragraph
Rule 9     md -> md listdash
Rule 10    listdash -> LISTDASH paragraph
Rule 11    codefield0 -> codefield paragraph
Rule 12    codefield0 -> codefield0 paragraph
Rule 13    codefield -> codefield line line
Rule 14    codefield -> codefield0 line line
Rule 15    codefield0 -> line CODEFIELD
Rule 16    paragraph -> paragraph contents
Rule 17    paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
Rule 18    paragraph -> paragraph BOLD contents BOLD
Rule 19    paragraph -> paragraph ITALIC contents ITALIC
Rule 20    paragraph -> paragraph CODE contents CODE
Rule 21    paragraph -> contents
Rule 22    contents -> TEXT
Rule 23    head -> POUND TEXT
Rule 24    image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN
Rule 25    quote -> line QUOTE paragraph
Rule 26    line -> LINE
Rule 27    empty -> <empty>

Terminals, with rules where they appear

BOLD                 : 18 18
CODE                 : 20 20
CODEFIELD            : 3 15
ITALIC               : 19 19
LBRACKET             : 17 24
LINE                 : 26
LISTDASH             : 10
LISTNUMBER           : 8
LPAREN               : 17 24
POINT                : 24
POUND                : 23
QUOTE                : 25
RBRACKET             : 17 24
RPAREN               : 17 24
TEXT                 : 22 23 24 24
error                : 

Nonterminals, with rules where they appear

codefield            : 3 11 13
codefield0           : 12 14
contents             : 16 17 17 18 19 20 21
empty                : 7
head                 : 1
image                : 5
line                 : 2 3 6 13 13 14 14 15 24 25
listdash             : 9
md                   : 1 2 3 4 5 6 8 9 0
paragraph            : 2 8 10 11 12 16 17 18 19 20 25
quote                : 4

Parsing method: LALR

state 0

    (0) S' -> . md
    (1) md -> . md head
    (2) md -> . md line paragraph
    (3) md -> . md codefield line CODEFIELD
    (4) md -> . md quote
    (5) md -> . md image
    (6) md -> . md line
    (7) md -> . empty
    (8) md -> . md LISTNUMBER paragraph
    (9) md -> . md listdash
    (27) empty -> .

    LISTNUMBER      reduce using rule 27 (empty -> .)
    POUND           reduce using rule 27 (empty -> .)
    LINE            reduce using rule 27 (empty -> .)
    LISTDASH        reduce using rule 27 (empty -> .)
    $end            reduce using rule 27 (empty -> .)

    md                             shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> md .
    (1) md -> md . head
    (2) md -> md . line paragraph
    (3) md -> md . codefield line CODEFIELD
    (4) md -> md . quote
    (5) md -> md . image
    (6) md -> md . line
    (8) md -> md . LISTNUMBER paragraph
    (9) md -> md . listdash
    (23) head -> . POUND TEXT
    (26) line -> . LINE
    (13) codefield -> . codefield line line
    (14) codefield -> . codefield0 line line
    (25) quote -> . line QUOTE paragraph
    (24) image -> . line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN
    (10) listdash -> . LISTDASH paragraph
    (11) codefield0 -> . codefield paragraph
    (12) codefield0 -> . codefield0 paragraph
    (15) codefield0 -> . line CODEFIELD

    LISTNUMBER      shift and go to state 8
    POUND           shift and go to state 10
    LINE            shift and go to state 11
    LISTDASH        shift and go to state 13

    head                           shift and go to state 3
    line                           shift and go to state 4
    codefield                      shift and go to state 5
    quote                          shift and go to state 6
    image                          shift and go to state 7
    listdash                       shift and go to state 9
    codefield0                     shift and go to state 12

state 2

    (7) md -> empty .

    LISTNUMBER      reduce using rule 7 (md -> empty .)
    POUND           reduce using rule 7 (md -> empty .)
    LINE            reduce using rule 7 (md -> empty .)
    LISTDASH        reduce using rule 7 (md -> empty .)
    $end            reduce using rule 7 (md -> empty .)


state 3

    (1) md -> md head .

    LISTNUMBER      reduce using rule 1 (md -> md head .)
    POUND           reduce using rule 1 (md -> md head .)
    LINE            reduce using rule 1 (md -> md head .)
    LISTDASH        reduce using rule 1 (md -> md head .)
    $end            reduce using rule 1 (md -> md head .)


state 4

    (2) md -> md line . paragraph
    (6) md -> md line .
    (25) quote -> line . QUOTE paragraph
    (24) image -> line . POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN
    (15) codefield0 -> line . CODEFIELD
    (16) paragraph -> . paragraph contents
    (17) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> . paragraph BOLD contents BOLD
    (19) paragraph -> . paragraph ITALIC contents ITALIC
    (20) paragraph -> . paragraph CODE contents CODE
    (21) paragraph -> . contents
    (22) contents -> . TEXT

    LISTNUMBER      reduce using rule 6 (md -> md line .)
    POUND           reduce using rule 6 (md -> md line .)
    LINE            reduce using rule 6 (md -> md line .)
    LISTDASH        reduce using rule 6 (md -> md line .)
    $end            reduce using rule 6 (md -> md line .)
    QUOTE           shift and go to state 15
    POINT           shift and go to state 16
    CODEFIELD       shift and go to state 18
    TEXT            shift and go to state 17

    paragraph                      shift and go to state 14
    contents                       shift and go to state 19

state 5

    (3) md -> md codefield . line CODEFIELD
    (13) codefield -> codefield . line line
    (11) codefield0 -> codefield . paragraph
    (26) line -> . LINE
    (16) paragraph -> . paragraph contents
    (17) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> . paragraph BOLD contents BOLD
    (19) paragraph -> . paragraph ITALIC contents ITALIC
    (20) paragraph -> . paragraph CODE contents CODE
    (21) paragraph -> . contents
    (22) contents -> . TEXT

    LINE            shift and go to state 11
    TEXT            shift and go to state 17

    line                           shift and go to state 20
    paragraph                      shift and go to state 21
    contents                       shift and go to state 19

state 6

    (4) md -> md quote .

    LISTNUMBER      reduce using rule 4 (md -> md quote .)
    POUND           reduce using rule 4 (md -> md quote .)
    LINE            reduce using rule 4 (md -> md quote .)
    LISTDASH        reduce using rule 4 (md -> md quote .)
    $end            reduce using rule 4 (md -> md quote .)


state 7

    (5) md -> md image .

    LISTNUMBER      reduce using rule 5 (md -> md image .)
    POUND           reduce using rule 5 (md -> md image .)
    LINE            reduce using rule 5 (md -> md image .)
    LISTDASH        reduce using rule 5 (md -> md image .)
    $end            reduce using rule 5 (md -> md image .)


state 8

    (8) md -> md LISTNUMBER . paragraph
    (16) paragraph -> . paragraph contents
    (17) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> . paragraph BOLD contents BOLD
    (19) paragraph -> . paragraph ITALIC contents ITALIC
    (20) paragraph -> . paragraph CODE contents CODE
    (21) paragraph -> . contents
    (22) contents -> . TEXT

    TEXT            shift and go to state 17

    paragraph                      shift and go to state 22
    contents                       shift and go to state 19

state 9

    (9) md -> md listdash .

    LISTNUMBER      reduce using rule 9 (md -> md listdash .)
    POUND           reduce using rule 9 (md -> md listdash .)
    LINE            reduce using rule 9 (md -> md listdash .)
    LISTDASH        reduce using rule 9 (md -> md listdash .)
    $end            reduce using rule 9 (md -> md listdash .)


state 10

    (23) head -> POUND . TEXT

    TEXT            shift and go to state 23


state 11

    (26) line -> LINE .

    QUOTE           reduce using rule 26 (line -> LINE .)
    POINT           reduce using rule 26 (line -> LINE .)
    CODEFIELD       reduce using rule 26 (line -> LINE .)
    TEXT            reduce using rule 26 (line -> LINE .)
    LISTNUMBER      reduce using rule 26 (line -> LINE .)
    POUND           reduce using rule 26 (line -> LINE .)
    LINE            reduce using rule 26 (line -> LINE .)
    LISTDASH        reduce using rule 26 (line -> LINE .)
    $end            reduce using rule 26 (line -> LINE .)


state 12

    (14) codefield -> codefield0 . line line
    (12) codefield0 -> codefield0 . paragraph
    (26) line -> . LINE
    (16) paragraph -> . paragraph contents
    (17) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> . paragraph BOLD contents BOLD
    (19) paragraph -> . paragraph ITALIC contents ITALIC
    (20) paragraph -> . paragraph CODE contents CODE
    (21) paragraph -> . contents
    (22) contents -> . TEXT

    LINE            shift and go to state 11
    TEXT            shift and go to state 17

    line                           shift and go to state 24
    paragraph                      shift and go to state 25
    contents                       shift and go to state 19

state 13

    (10) listdash -> LISTDASH . paragraph
    (16) paragraph -> . paragraph contents
    (17) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> . paragraph BOLD contents BOLD
    (19) paragraph -> . paragraph ITALIC contents ITALIC
    (20) paragraph -> . paragraph CODE contents CODE
    (21) paragraph -> . contents
    (22) contents -> . TEXT

    TEXT            shift and go to state 17

    paragraph                      shift and go to state 26
    contents                       shift and go to state 19

state 14

    (2) md -> md line paragraph .
    (16) paragraph -> paragraph . contents
    (17) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> paragraph . BOLD contents BOLD
    (19) paragraph -> paragraph . ITALIC contents ITALIC
    (20) paragraph -> paragraph . CODE contents CODE
    (22) contents -> . TEXT

    LISTNUMBER      reduce using rule 2 (md -> md line paragraph .)
    POUND           reduce using rule 2 (md -> md line paragraph .)
    LINE            reduce using rule 2 (md -> md line paragraph .)
    LISTDASH        reduce using rule 2 (md -> md line paragraph .)
    $end            reduce using rule 2 (md -> md line paragraph .)
    LBRACKET        shift and go to state 28
    BOLD            shift and go to state 29
    ITALIC          shift and go to state 30
    CODE            shift and go to state 31
    TEXT            shift and go to state 17

    contents                       shift and go to state 27

state 15

    (25) quote -> line QUOTE . paragraph
    (16) paragraph -> . paragraph contents
    (17) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> . paragraph BOLD contents BOLD
    (19) paragraph -> . paragraph ITALIC contents ITALIC
    (20) paragraph -> . paragraph CODE contents CODE
    (21) paragraph -> . contents
    (22) contents -> . TEXT

    TEXT            shift and go to state 17

    paragraph                      shift and go to state 32
    contents                       shift and go to state 19

state 16

    (24) image -> line POINT . LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN

    LBRACKET        shift and go to state 33


state 17

    (22) contents -> TEXT .

    LBRACKET        reduce using rule 22 (contents -> TEXT .)
    BOLD            reduce using rule 22 (contents -> TEXT .)
    ITALIC          reduce using rule 22 (contents -> TEXT .)
    CODE            reduce using rule 22 (contents -> TEXT .)
    TEXT            reduce using rule 22 (contents -> TEXT .)
    LISTNUMBER      reduce using rule 22 (contents -> TEXT .)
    POUND           reduce using rule 22 (contents -> TEXT .)
    LINE            reduce using rule 22 (contents -> TEXT .)
    LISTDASH        reduce using rule 22 (contents -> TEXT .)
    $end            reduce using rule 22 (contents -> TEXT .)
    RBRACKET        reduce using rule 22 (contents -> TEXT .)
    RPAREN          reduce using rule 22 (contents -> TEXT .)


state 18

    (15) codefield0 -> line CODEFIELD .

    LINE            reduce using rule 15 (codefield0 -> line CODEFIELD .)
    TEXT            reduce using rule 15 (codefield0 -> line CODEFIELD .)


state 19

    (21) paragraph -> contents .

    LBRACKET        reduce using rule 21 (paragraph -> contents .)
    BOLD            reduce using rule 21 (paragraph -> contents .)
    ITALIC          reduce using rule 21 (paragraph -> contents .)
    CODE            reduce using rule 21 (paragraph -> contents .)
    TEXT            reduce using rule 21 (paragraph -> contents .)
    LISTNUMBER      reduce using rule 21 (paragraph -> contents .)
    POUND           reduce using rule 21 (paragraph -> contents .)
    LINE            reduce using rule 21 (paragraph -> contents .)
    LISTDASH        reduce using rule 21 (paragraph -> contents .)
    $end            reduce using rule 21 (paragraph -> contents .)


state 20

    (3) md -> md codefield line . CODEFIELD
    (13) codefield -> codefield line . line
    (26) line -> . LINE

    CODEFIELD       shift and go to state 35
    LINE            shift and go to state 11

    line                           shift and go to state 34

state 21

    (11) codefield0 -> codefield paragraph .
    (16) paragraph -> paragraph . contents
    (17) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> paragraph . BOLD contents BOLD
    (19) paragraph -> paragraph . ITALIC contents ITALIC
    (20) paragraph -> paragraph . CODE contents CODE
    (22) contents -> . TEXT

  ! shift/reduce conflict for TEXT resolved as shift
    LINE            reduce using rule 11 (codefield0 -> codefield paragraph .)
    LBRACKET        shift and go to state 28
    BOLD            shift and go to state 29
    ITALIC          shift and go to state 30
    CODE            shift and go to state 31
    TEXT            shift and go to state 17

  ! TEXT            [ reduce using rule 11 (codefield0 -> codefield paragraph .) ]

    contents                       shift and go to state 27

state 22

    (8) md -> md LISTNUMBER paragraph .
    (16) paragraph -> paragraph . contents
    (17) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> paragraph . BOLD contents BOLD
    (19) paragraph -> paragraph . ITALIC contents ITALIC
    (20) paragraph -> paragraph . CODE contents CODE
    (22) contents -> . TEXT

    LISTNUMBER      reduce using rule 8 (md -> md LISTNUMBER paragraph .)
    POUND           reduce using rule 8 (md -> md LISTNUMBER paragraph .)
    LINE            reduce using rule 8 (md -> md LISTNUMBER paragraph .)
    LISTDASH        reduce using rule 8 (md -> md LISTNUMBER paragraph .)
    $end            reduce using rule 8 (md -> md LISTNUMBER paragraph .)
    LBRACKET        shift and go to state 28
    BOLD            shift and go to state 29
    ITALIC          shift and go to state 30
    CODE            shift and go to state 31
    TEXT            shift and go to state 17

    contents                       shift and go to state 27

state 23

    (23) head -> POUND TEXT .

    LISTNUMBER      reduce using rule 23 (head -> POUND TEXT .)
    POUND           reduce using rule 23 (head -> POUND TEXT .)
    LINE            reduce using rule 23 (head -> POUND TEXT .)
    LISTDASH        reduce using rule 23 (head -> POUND TEXT .)
    $end            reduce using rule 23 (head -> POUND TEXT .)


state 24

    (14) codefield -> codefield0 line . line
    (26) line -> . LINE

    LINE            shift and go to state 11

    line                           shift and go to state 36

state 25

    (12) codefield0 -> codefield0 paragraph .
    (16) paragraph -> paragraph . contents
    (17) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> paragraph . BOLD contents BOLD
    (19) paragraph -> paragraph . ITALIC contents ITALIC
    (20) paragraph -> paragraph . CODE contents CODE
    (22) contents -> . TEXT

  ! shift/reduce conflict for TEXT resolved as shift
    LINE            reduce using rule 12 (codefield0 -> codefield0 paragraph .)
    LBRACKET        shift and go to state 28
    BOLD            shift and go to state 29
    ITALIC          shift and go to state 30
    CODE            shift and go to state 31
    TEXT            shift and go to state 17

  ! TEXT            [ reduce using rule 12 (codefield0 -> codefield0 paragraph .) ]

    contents                       shift and go to state 27

state 26

    (10) listdash -> LISTDASH paragraph .
    (16) paragraph -> paragraph . contents
    (17) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> paragraph . BOLD contents BOLD
    (19) paragraph -> paragraph . ITALIC contents ITALIC
    (20) paragraph -> paragraph . CODE contents CODE
    (22) contents -> . TEXT

    LISTNUMBER      reduce using rule 10 (listdash -> LISTDASH paragraph .)
    POUND           reduce using rule 10 (listdash -> LISTDASH paragraph .)
    LINE            reduce using rule 10 (listdash -> LISTDASH paragraph .)
    LISTDASH        reduce using rule 10 (listdash -> LISTDASH paragraph .)
    $end            reduce using rule 10 (listdash -> LISTDASH paragraph .)
    LBRACKET        shift and go to state 28
    BOLD            shift and go to state 29
    ITALIC          shift and go to state 30
    CODE            shift and go to state 31
    TEXT            shift and go to state 17

    contents                       shift and go to state 27

state 27

    (16) paragraph -> paragraph contents .

    LBRACKET        reduce using rule 16 (paragraph -> paragraph contents .)
    BOLD            reduce using rule 16 (paragraph -> paragraph contents .)
    ITALIC          reduce using rule 16 (paragraph -> paragraph contents .)
    CODE            reduce using rule 16 (paragraph -> paragraph contents .)
    TEXT            reduce using rule 16 (paragraph -> paragraph contents .)
    LISTNUMBER      reduce using rule 16 (paragraph -> paragraph contents .)
    POUND           reduce using rule 16 (paragraph -> paragraph contents .)
    LINE            reduce using rule 16 (paragraph -> paragraph contents .)
    LISTDASH        reduce using rule 16 (paragraph -> paragraph contents .)
    $end            reduce using rule 16 (paragraph -> paragraph contents .)


state 28

    (17) paragraph -> paragraph LBRACKET . contents RBRACKET LPAREN contents RPAREN
    (22) contents -> . TEXT

    TEXT            shift and go to state 17

    contents                       shift and go to state 37

state 29

    (18) paragraph -> paragraph BOLD . contents BOLD
    (22) contents -> . TEXT

    TEXT            shift and go to state 17

    contents                       shift and go to state 38

state 30

    (19) paragraph -> paragraph ITALIC . contents ITALIC
    (22) contents -> . TEXT

    TEXT            shift and go to state 17

    contents                       shift and go to state 39

state 31

    (20) paragraph -> paragraph CODE . contents CODE
    (22) contents -> . TEXT

    TEXT            shift and go to state 17

    contents                       shift and go to state 40

state 32

    (25) quote -> line QUOTE paragraph .
    (16) paragraph -> paragraph . contents
    (17) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (18) paragraph -> paragraph . BOLD contents BOLD
    (19) paragraph -> paragraph . ITALIC contents ITALIC
    (20) paragraph -> paragraph . CODE contents CODE
    (22) contents -> . TEXT

    LISTNUMBER      reduce using rule 25 (quote -> line QUOTE paragraph .)
    POUND           reduce using rule 25 (quote -> line QUOTE paragraph .)
    LINE            reduce using rule 25 (quote -> line QUOTE paragraph .)
    LISTDASH        reduce using rule 25 (quote -> line QUOTE paragraph .)
    $end            reduce using rule 25 (quote -> line QUOTE paragraph .)
    LBRACKET        shift and go to state 28
    BOLD            shift and go to state 29
    ITALIC          shift and go to state 30
    CODE            shift and go to state 31
    TEXT            shift and go to state 17

    contents                       shift and go to state 27

state 33

    (24) image -> line POINT LBRACKET . TEXT RBRACKET LPAREN TEXT RPAREN

    TEXT            shift and go to state 41


state 34

    (13) codefield -> codefield line line .

    LINE            reduce using rule 13 (codefield -> codefield line line .)
    TEXT            reduce using rule 13 (codefield -> codefield line line .)


state 35

    (3) md -> md codefield line CODEFIELD .

    LISTNUMBER      reduce using rule 3 (md -> md codefield line CODEFIELD .)
    POUND           reduce using rule 3 (md -> md codefield line CODEFIELD .)
    LINE            reduce using rule 3 (md -> md codefield line CODEFIELD .)
    LISTDASH        reduce using rule 3 (md -> md codefield line CODEFIELD .)
    $end            reduce using rule 3 (md -> md codefield line CODEFIELD .)


state 36

    (14) codefield -> codefield0 line line .

    LINE            reduce using rule 14 (codefield -> codefield0 line line .)
    TEXT            reduce using rule 14 (codefield -> codefield0 line line .)


state 37

    (17) paragraph -> paragraph LBRACKET contents . RBRACKET LPAREN contents RPAREN

    RBRACKET        shift and go to state 42


state 38

    (18) paragraph -> paragraph BOLD contents . BOLD

    BOLD            shift and go to state 43


state 39

    (19) paragraph -> paragraph ITALIC contents . ITALIC

    ITALIC          shift and go to state 44


state 40

    (20) paragraph -> paragraph CODE contents . CODE

    CODE            shift and go to state 45


state 41

    (24) image -> line POINT LBRACKET TEXT . RBRACKET LPAREN TEXT RPAREN

    RBRACKET        shift and go to state 46


state 42

    (17) paragraph -> paragraph LBRACKET contents RBRACKET . LPAREN contents RPAREN

    LPAREN          shift and go to state 47


state 43

    (18) paragraph -> paragraph BOLD contents BOLD .

    LBRACKET        reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    BOLD            reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    ITALIC          reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    CODE            reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    TEXT            reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    LISTNUMBER      reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    POUND           reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    LINE            reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    LISTDASH        reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)
    $end            reduce using rule 18 (paragraph -> paragraph BOLD contents BOLD .)


state 44

    (19) paragraph -> paragraph ITALIC contents ITALIC .

    LBRACKET        reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    BOLD            reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    ITALIC          reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    CODE            reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    TEXT            reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    LISTNUMBER      reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    POUND           reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    LINE            reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    LISTDASH        reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)
    $end            reduce using rule 19 (paragraph -> paragraph ITALIC contents ITALIC .)


state 45

    (20) paragraph -> paragraph CODE contents CODE .

    LBRACKET        reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    BOLD            reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    ITALIC          reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    CODE            reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    TEXT            reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    LISTNUMBER      reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    POUND           reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    LINE            reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    LISTDASH        reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)
    $end            reduce using rule 20 (paragraph -> paragraph CODE contents CODE .)


state 46

    (24) image -> line POINT LBRACKET TEXT RBRACKET . LPAREN TEXT RPAREN

    LPAREN          shift and go to state 48


state 47

    (17) paragraph -> paragraph LBRACKET contents RBRACKET LPAREN . contents RPAREN
    (22) contents -> . TEXT

    TEXT            shift and go to state 17

    contents                       shift and go to state 49

state 48

    (24) image -> line POINT LBRACKET TEXT RBRACKET LPAREN . TEXT RPAREN

    TEXT            shift and go to state 50


state 49

    (17) paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents . RPAREN

    RPAREN          shift and go to state 51


state 50

    (24) image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT . RPAREN

    RPAREN          shift and go to state 52


state 51

    (17) paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .

    LBRACKET        reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    BOLD            reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    ITALIC          reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    CODE            reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    TEXT            reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    LISTNUMBER      reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    POUND           reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    LINE            reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    LISTDASH        reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    $end            reduce using rule 17 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)


state 52

    (24) image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .

    LISTNUMBER      reduce using rule 24 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)
    POUND           reduce using rule 24 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)
    LINE            reduce using rule 24 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)
    LISTDASH        reduce using rule 24 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)
    $end            reduce using rule 24 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for TEXT in state 21 resolved as shift
WARNING: shift/reduce conflict for TEXT in state 25 resolved as shift
